--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com"
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
 Imports: purrr, dplyr, checkmate, rlang, tidyr, zoo, tidyselect
-License: CC0
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
