more viz. lasagna done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,11 @@ S3method(feval,data.frame)
 S3method(feval,list)
 S3method(feval,matrix)
 S3method(format,fvector)
+S3method(ggplot,fvector)
 S3method(n_evaluations,default)
 S3method(n_evaluations,feval_irreg)
 S3method(n_evaluations,feval_reg)
-S3method(plot,feval)
+S3method(plot,fvector)
 S3method(print,fbase)
 S3method(print,feval_irreg)
 S3method(print,feval_reg)
@@ -56,3 +57,4 @@ importFrom(modelr,seq_range)
 importFrom(rlang,quo_text)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_select)
+importFrom(utils,modifyList)
