clean up imports, methods definitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,13 +16,14 @@ S3method(evaluations,default)
 S3method(evaluations,fbase)
 S3method(evaluations,feval)
 S3method(fbase,data.frame)
+S3method(fbase,feval)
 S3method(fbase,list)
 S3method(fbase,matrix)
 S3method(feval,data.frame)
+S3method(feval,fbase)
 S3method(feval,list)
 S3method(feval,matrix)
 S3method(format,fvector)
-S3method(ggplot,fvector)
 S3method(n_evaluations,default)
 S3method(n_evaluations,feval_irreg)
 S3method(n_evaluations,feval_reg)
@@ -40,6 +41,7 @@ export(evaluations)
 export(evaluator)
 export(fbase)
 export(feval)
+export(funplot)
 export(is_fbase)
 export(is_feval)
 export(is_fvector)
@@ -53,8 +55,16 @@ import(mgcv)
 import(purrr)
 import(tidyr)
 import(zoo)
+importFrom(grDevices,heat.colors)
+importFrom(grDevices,rgb)
+importFrom(graphics,axis)
+importFrom(graphics,image)
+importFrom(graphics,matplot)
 importFrom(modelr,seq_range)
 importFrom(rlang,quo_text)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,var)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_select)
 importFrom(utils,modifyList)
