adresses #10: add lines(), points(), working lasagna plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,12 @@ S3method(feval,fbase)
 S3method(feval,list)
 S3method(feval,matrix)
 S3method(format,fvector)
+S3method(lines,fvector)
 S3method(n_evaluations,default)
 S3method(n_evaluations,feval_irreg)
 S3method(n_evaluations,feval_reg)
 S3method(plot,fvector)
+S3method(points,fvector)
 S3method(print,fbase)
 S3method(print,feval_irreg)
 S3method(print,feval_reg)
