--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,17 @@ S3method(argvals,default)
 S3method(argvals,fbase)
 S3method(argvals,feval_irreg)
 S3method(argvals,feval_reg)
+S3method(as.data.frame,fbase)
+S3method(as.data.frame,feval)
+S3method(as.fbase,data.frame)
+S3method(as.fbase,feval)
+S3method(as.fbase,list)
+S3method(as.fbase,matrix)
+S3method(as.feval,data.frame)
+S3method(as.feval,fbase)
+S3method(as.feval,list)
+S3method(as.feval,matrix)
+S3method(as.matrix,feval)
 S3method(coef,fbase)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
@@ -36,6 +47,8 @@ S3method(print,feval_reg)
 S3method(range,fvector)
 export("evaluator<-")
 export(argvals)
+export(as.fbase)
+export(as.feval)
 export(basis)
 export(domain)
 export(evaluate)
