#13, #14: Math, Summary almost done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,8 @@ S3method(evaluations,default)
 S3method(evaluations,fbase)
 S3method(evaluations,feval)
 S3method(fbase,data.frame)
-S3method(fbase,fvector)
+S3method(fbase,fbase)
+S3method(fbase,feval)
 S3method(fbase,list)
 S3method(fbase,matrix)
 S3method(feval,data.frame)
