added numeric-constructor & other minor fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,12 @@ S3method(fbase,fbase)
 S3method(fbase,feval)
 S3method(fbase,list)
 S3method(fbase,matrix)
+S3method(fbase,numeric)
 S3method(feval,data.frame)
 S3method(feval,fvector)
 S3method(feval,list)
 S3method(feval,matrix)
+S3method(feval,numeric)
 S3method(format,fvector)
 S3method(lines,fvector)
 S3method(n_evaluations,default)
