--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,9 @@ S3method(as.feval,fbase)
 S3method(as.feval,list)
 S3method(as.feval,matrix)
 S3method(as.matrix,feval)
+S3method(c,fbase)
+S3method(c,feval)
+S3method(c,fvector)
 S3method(coef,fbase)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
@@ -38,6 +41,7 @@ S3method(feval,matrix)
 S3method(feval,numeric)
 S3method(format,fvector)
 S3method(lines,fvector)
+S3method(merge,fvector)
 S3method(n_evaluations,default)
 S3method(n_evaluations,feval_irreg)
 S3method(n_evaluations,feval_reg)
