better docs, avoid reordering of input data in conversion, always order argvals.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ S3method(feval,matrix)
 S3method(feval,numeric)
 S3method(format,fvector)
 S3method(lines,fvector)
+S3method(mean,fvector)
+S3method(median,fvector)
 S3method(merge,fvector)
 S3method(n_evaluations,default)
 S3method(n_evaluations,feval_irreg)
@@ -50,11 +52,15 @@ S3method(points,fvector)
 S3method(print,fbase)
 S3method(print,feval_irreg)
 S3method(print,feval_reg)
-S3method(range,fvector)
+S3method(quantile,fvector)
+S3method(sd,default)
+S3method(var,default)
+S3method(var,fvector)
 export("evaluator<-")
 export(argvals)
 export(as.fbase)
 export(as.feval)
+export(as.feval_irreg.feval_reg)
 export(basis)
 export(domain)
 export(evaluate)
@@ -68,6 +74,8 @@ export(is_feval)
 export(is_fvector)
 export(is_irreg)
 export(n_evaluations)
+export(sd)
+export(var)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
@@ -83,9 +91,11 @@ importFrom(graphics,image)
 importFrom(graphics,matlines)
 importFrom(graphics,matplot)
 importFrom(modelr,seq_range)
+importFrom(mvtnorm,rmvnorm)
 importFrom(rlang,quo_text)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_select)
