--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,9 @@ Version: 0.0.0.9000
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")))
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
-Imports: stats, purrr, dplyr, checkmate, tidyr, zoo, tidyselect, memoise, rlang, mgcv, ggplot2, modelr
+Imports: 
+  checkmate, dplyr, ggplot2, memoise, mvtnorm, mgcv, modelr, purrr, rlang,
+  stats, tidyselect, tidyr, zoo  
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
