--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,8 @@ S3method(print,fbase)
 S3method(print,feval_irreg)
 S3method(print,feval_reg)
 S3method(quantile,fvector)
-S3method(sd,default)
+S3method(rev,fvector)
+S3method(sd,fvector)
 S3method(var,default)
 S3method(var,fvector)
 export("evaluator<-")
@@ -91,8 +92,10 @@ importFrom(graphics,matplot)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(rlang,quo_text)
+importFrom(stats,coef)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tidyselect,quos)
