--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(is_feval)
 export(is_fvector)
 export(is_irreg)
 export(n_evaluations)
+export(rgp)
 export(sd)
 export(var)
 import(checkmate)
