--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,6 @@ S3method(argvals,feval_irreg)
 S3method(argvals,feval_reg)
 S3method(as.data.frame,fbase)
 S3method(as.data.frame,feval)
-S3method(as.fbase,data.frame)
-S3method(as.fbase,feval)
-S3method(as.fbase,list)
-S3method(as.fbase,matrix)
-S3method(as.feval,data.frame)
-S3method(as.feval,fbase)
-S3method(as.feval,list)
-S3method(as.feval,matrix)
 S3method(as.matrix,feval)
 S3method(c,fbase)
 S3method(c,feval)
@@ -39,6 +31,10 @@ S3method(feval,list)
 S3method(feval,matrix)
 S3method(feval,numeric)
 S3method(format,fvector)
+S3method(fpcbase,data.frame)
+S3method(fpcbase,fvector)
+S3method(fpcbase,matrix)
+S3method(fpcbase,numeric)
 S3method(lines,fvector)
 S3method(mean,fvector)
 S3method(median,fvector)
@@ -67,6 +63,7 @@ export(evaluations)
 export(evaluator)
 export(fbase)
 export(feval)
+export(fpcbase)
 export(funplot)
 export(is_fbase)
 export(is_feval)
@@ -92,6 +89,7 @@ importFrom(graphics,matlines)
 importFrom(graphics,matplot)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
+importFrom(refund,fpca.sc)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,median)
