changed feval_irreg representation and constructor details, fixes #25 (yay!)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,8 @@ S3method(evaluate,fbase)
 S3method(evaluate,feval)
 S3method(evaluations,default)
 S3method(evaluations,fbase)
-S3method(evaluations,feval)
+S3method(evaluations,feval_irreg)
+S3method(evaluations,feval_reg)
 S3method(fbase,data.frame)
 S3method(fbase,fbase)
 S3method(fbase,feval)
