new depth generic to be fleshed out, MBD based median, summary (with MBD-based central 50% range). closes #8, addresses #19

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(as.matrix,feval)
 S3method(c,fbase)
 S3method(c,feval)
 S3method(coef,fbase)
+S3method(depth,fvector)
+S3method(depth,matrix)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
 S3method(evaluate,fbase)
@@ -51,6 +53,7 @@ S3method(print,feval_reg)
 S3method(quantile,fvector)
 S3method(rev,fvector)
 S3method(sd,fvector)
+S3method(summary,fvector)
 S3method(var,default)
 S3method(var,fvector)
 export("evaluator<-")
@@ -58,6 +61,7 @@ export(argvals)
 export(as.fbase)
 export(as.feval)
 export(basis)
+export(depth)
 export(domain)
 export(evaluate)
 export(evaluations)
