working on #11. derivs mostly done, started with integrate.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,15 @@ S3method(argvals,feval_irreg)
 S3method(argvals,feval_reg)
 S3method(as.data.frame,fbase)
 S3method(as.data.frame,feval)
+S3method(as.function,fvector)
 S3method(as.matrix,feval)
 S3method(c,fbase)
 S3method(c,feval)
 S3method(coef,fbase)
 S3method(depth,fvector)
 S3method(depth,matrix)
+S3method(deriv,fbase)
+S3method(deriv,feval)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
 S3method(evaluate,fbase)
@@ -70,6 +73,7 @@ export(fbase)
 export(feval)
 export(fpcbase)
 export(funplot)
+export(integrate)
 export(is_fbase)
 export(is_feval)
 export(is_fvector)
@@ -97,6 +101,7 @@ importFrom(mvtnorm,rmvnorm)
 importFrom(refund,fpca.sc)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
+importFrom(stats,deriv)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
