more progress for integrate (#11)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,9 @@ S3method(fpcbase,data.frame)
 S3method(fpcbase,fvector)
 S3method(fpcbase,matrix)
 S3method(fpcbase,numeric)
+S3method(integrate,"function")
+S3method(integrate,fbase)
+S3method(integrate,feval)
 S3method(lines,fvector)
 S3method(mean,fvector)
 S3method(median,fvector)
