ggplot-geoms / stats! adresses #10

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ S3method(summary,fvector)
 S3method(var,default)
 S3method(var,fvector)
 export("evaluator<-")
+export(StatTfd)
 export(argvals)
 export(as.fbase)
 export(as.feval)
@@ -76,6 +77,9 @@ export(fbase)
 export(feval)
 export(fpcbase)
 export(funplot)
+export(geom_lasagna)
+export(geom_meatballs)
+export(geom_spaghetti)
 export(integrate)
 export(is_fbase)
 export(is_feval)
@@ -84,6 +88,7 @@ export(is_irreg)
 export(n_evaluations)
 export(rgp)
 export(sd)
+export(stat_tfd)
 export(var)
 import(checkmate)
 import(dplyr)
@@ -93,6 +98,9 @@ import(mgcv)
 import(purrr)
 import(tidyr)
 import(zoo)
+importFrom(ggplot2,Geom)
+importFrom(ggplot2,Stat)
+importFrom(ggplot2,ggproto)
 importFrom(grDevices,heat.colors)
 importFrom(grDevices,rgb)
 importFrom(graphics,axis)
