--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat, data.table, refund
+Suggests: testthat, data.table
 Roxygen: list(markdown = TRUE)
