--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,8 +116,10 @@ importFrom(stats,deriv)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
+importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_select)
+importFrom(utils,head)
 importFrom(utils,modifyList)
