export group generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method("[",fvector)
 S3method("[<-",fvector)
+S3method(Math,fbase)
+S3method(Math,feval)
+S3method(Summary,fvector)
 S3method(argvals,default)
 S3method(argvals,fbase)
 S3method(argvals,feval_irreg)
@@ -13,6 +16,14 @@ S3method(as.matrix,feval)
 S3method(c,fbase)
 S3method(c,feval)
 S3method(coef,fbase)
+S3method(cummax,fbase)
+S3method(cummax,feval)
+S3method(cummin,fbase)
+S3method(cummin,feval)
+S3method(cumprod,fbase)
+S3method(cumprod,feval)
+S3method(cumsum,fbase)
+S3method(cumsum,feval)
 S3method(depth,fvector)
 S3method(depth,matrix)
 S3method(deriv,fbase)
@@ -63,7 +74,7 @@ S3method(summary,fvector)
 S3method(var,default)
 S3method(var,fvector)
 export("evaluator<-")
-export(StatTfd)
+export(StatTf)
 export(argvals)
 export(as.fbase)
 export(as.feval)
@@ -88,7 +99,7 @@ export(is_irreg)
 export(n_evaluations)
 export(rgp)
 export(sd)
-export(stat_tfd)
+export(stat_tf)
 export(var)
 import(checkmate)
 import(dplyr)
