adress #16: feval renamed to tfd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,50 +3,45 @@
 S3method("[",tf)
 S3method("[<-",tf)
 S3method(Math,fbase)
-S3method(Math,feval)
+S3method(Math,tfd)
 S3method(Summary,tf)
 S3method(argvals,default)
 S3method(argvals,fbase)
-S3method(argvals,feval_irreg)
-S3method(argvals,feval_reg)
+S3method(argvals,tfd_irreg)
+S3method(argvals,tfd_reg)
 S3method(as.data.frame,fbase)
-S3method(as.data.frame,feval)
+S3method(as.data.frame,tfd)
 S3method(as.function,tf)
-S3method(as.matrix,feval)
+S3method(as.matrix,tfd)
 S3method(c,fbase)
-S3method(c,feval)
+S3method(c,tfd)
 S3method(coef,fbase)
 S3method(cummax,fbase)
-S3method(cummax,feval)
+S3method(cummax,tfd)
 S3method(cummin,fbase)
-S3method(cummin,feval)
+S3method(cummin,tfd)
 S3method(cumprod,fbase)
-S3method(cumprod,feval)
+S3method(cumprod,tfd)
 S3method(cumsum,fbase)
-S3method(cumsum,feval)
+S3method(cumsum,tfd)
 S3method(depth,matrix)
 S3method(depth,tf)
 S3method(deriv,fbase)
-S3method(deriv,feval)
+S3method(deriv,tfd)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
 S3method(evaluate,fbase)
-S3method(evaluate,feval)
+S3method(evaluate,tfd)
 S3method(evaluations,default)
 S3method(evaluations,fbase)
-S3method(evaluations,feval_irreg)
-S3method(evaluations,feval_reg)
+S3method(evaluations,tfd_irreg)
+S3method(evaluations,tfd_reg)
 S3method(fbase,data.frame)
 S3method(fbase,fbase)
-S3method(fbase,feval)
 S3method(fbase,list)
 S3method(fbase,matrix)
 S3method(fbase,numeric)
-S3method(feval,data.frame)
-S3method(feval,list)
-S3method(feval,matrix)
-S3method(feval,numeric)
-S3method(feval,tf)
+S3method(fbase,tfd)
 S3method(format,tf)
 S3method(fpcbase,data.frame)
 S3method(fpcbase,matrix)
@@ -54,30 +49,35 @@ S3method(fpcbase,numeric)
 S3method(fpcbase,tf)
 S3method(integrate,"function")
 S3method(integrate,fbase)
-S3method(integrate,feval)
+S3method(integrate,tfd)
 S3method(lines,tf)
 S3method(mean,tf)
 S3method(median,tf)
 S3method(merge,tf)
 S3method(n_evaluations,default)
-S3method(n_evaluations,feval_irreg)
-S3method(n_evaluations,feval_reg)
+S3method(n_evaluations,tfd_irreg)
+S3method(n_evaluations,tfd_reg)
 S3method(plot,tf)
 S3method(points,tf)
 S3method(print,fbase)
-S3method(print,feval_irreg)
-S3method(print,feval_reg)
+S3method(print,tfd_irreg)
+S3method(print,tfd_reg)
 S3method(quantile,tf)
 S3method(rev,tf)
 S3method(sd,tf)
 S3method(summary,tf)
+S3method(tfd,data.frame)
+S3method(tfd,list)
+S3method(tfd,matrix)
+S3method(tfd,numeric)
+S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
 export("evaluator<-")
 export(StatTf)
 export(argvals)
 export(as.fbase)
-export(as.feval)
+export(as.tfd)
 export(basis)
 export(depth)
 export(domain)
@@ -85,7 +85,6 @@ export(evaluate)
 export(evaluations)
 export(evaluator)
 export(fbase)
-export(feval)
 export(fpcbase)
 export(funplot)
 export(geom_lasagna)
@@ -93,13 +92,14 @@ export(geom_meatballs)
 export(geom_spaghetti)
 export(integrate)
 export(is_fbase)
-export(is_feval)
 export(is_irreg)
 export(is_tf)
+export(is_tfd)
 export(n_evaluations)
 export(rgp)
 export(sd)
 export(stat_tf)
+export(tfd)
 export(var)
 import(checkmate)
 import(dplyr)
