--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,53 +2,47 @@
 
 S3method("[",tf)
 S3method("[<-",tf)
-S3method(Math,fbase)
+S3method(Math,tfb)
 S3method(Math,tfd)
 S3method(Summary,tf)
 S3method(argvals,default)
-S3method(argvals,fbase)
+S3method(argvals,tfb)
 S3method(argvals,tfd_irreg)
 S3method(argvals,tfd_reg)
-S3method(as.data.frame,fbase)
+S3method(as.data.frame,tfb)
 S3method(as.data.frame,tfd)
 S3method(as.function,tf)
 S3method(as.matrix,tfd)
-S3method(c,fbase)
+S3method(c,tfb)
 S3method(c,tfd)
-S3method(coef,fbase)
-S3method(cummax,fbase)
+S3method(coef,tfb)
+S3method(cummax,tfb)
 S3method(cummax,tfd)
-S3method(cummin,fbase)
+S3method(cummin,tfb)
 S3method(cummin,tfd)
-S3method(cumprod,fbase)
+S3method(cumprod,tfb)
 S3method(cumprod,tfd)
-S3method(cumsum,fbase)
+S3method(cumsum,tfb)
 S3method(cumsum,tfd)
 S3method(depth,matrix)
 S3method(depth,tf)
-S3method(deriv,fbase)
+S3method(deriv,tfb)
 S3method(deriv,tfd)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
-S3method(evaluate,fbase)
+S3method(evaluate,tfb)
 S3method(evaluate,tfd)
 S3method(evaluations,default)
-S3method(evaluations,fbase)
+S3method(evaluations,tfb)
 S3method(evaluations,tfd_irreg)
 S3method(evaluations,tfd_reg)
-S3method(fbase,data.frame)
-S3method(fbase,fbase)
-S3method(fbase,list)
-S3method(fbase,matrix)
-S3method(fbase,numeric)
-S3method(fbase,tfd)
 S3method(format,tf)
 S3method(fpcbase,data.frame)
 S3method(fpcbase,matrix)
 S3method(fpcbase,numeric)
 S3method(fpcbase,tf)
 S3method(integrate,"function")
-S3method(integrate,fbase)
+S3method(integrate,tfb)
 S3method(integrate,tfd)
 S3method(lines,tf)
 S3method(mean,tf)
@@ -59,13 +53,19 @@ S3method(n_evaluations,tfd_irreg)
 S3method(n_evaluations,tfd_reg)
 S3method(plot,tf)
 S3method(points,tf)
-S3method(print,fbase)
+S3method(print,tfb)
 S3method(print,tfd_irreg)
 S3method(print,tfd_reg)
 S3method(quantile,tf)
 S3method(rev,tf)
 S3method(sd,tf)
 S3method(summary,tf)
+S3method(tfb,data.frame)
+S3method(tfb,list)
+S3method(tfb,matrix)
+S3method(tfb,numeric)
+S3method(tfb,tfb)
+S3method(tfb,tfd)
 S3method(tfd,data.frame)
 S3method(tfd,list)
 S3method(tfd,matrix)
@@ -76,7 +76,7 @@ S3method(var,tf)
 export("evaluator<-")
 export(StatTf)
 export(argvals)
-export(as.fbase)
+export(as.tfb)
 export(as.tfd)
 export(basis)
 export(depth)
@@ -84,21 +84,21 @@ export(domain)
 export(evaluate)
 export(evaluations)
 export(evaluator)
-export(fbase)
 export(fpcbase)
 export(funplot)
 export(geom_lasagna)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(integrate)
-export(is_fbase)
 export(is_irreg)
 export(is_tf)
+export(is_tfb)
 export(is_tfd)
 export(n_evaluations)
 export(rgp)
 export(sd)
 export(stat_tf)
+export(tfb)
 export(tfd)
 export(var)
 import(checkmate)
