adresses #16: rename argvals -> arg, data -> value

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,10 @@ S3method("[<-",tf)
 S3method(Math,tfb)
 S3method(Math,tfd)
 S3method(Summary,tf)
-S3method(argvals,default)
-S3method(argvals,tfb)
-S3method(argvals,tfd_irreg)
-S3method(argvals,tfd_reg)
+S3method(arg,default)
+S3method(arg,tfb)
+S3method(arg,tfd_irreg)
+S3method(arg,tfd_reg)
 S3method(as.data.frame,tfb)
 S3method(as.data.frame,tfd)
 S3method(as.function,tf)
@@ -75,7 +75,7 @@ S3method(var,default)
 S3method(var,tf)
 export("evaluator<-")
 export(StatTf)
-export(argvals)
+export(arg)
 export(as.tfb)
 export(as.tfd)
 export(basis)
@@ -94,6 +94,7 @@ export(is_irreg)
 export(is_tf)
 export(is_tfb)
 export(is_tfd)
+export(jiggle)
 export(n_evaluations)
 export(rgp)
 export(sd)
