closes #16: rename fpcbase -> tfb_fpc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,10 +37,6 @@ S3method(evaluations,tfb)
 S3method(evaluations,tfd_irreg)
 S3method(evaluations,tfd_reg)
 S3method(format,tf)
-S3method(fpcbase,data.frame)
-S3method(fpcbase,matrix)
-S3method(fpcbase,numeric)
-S3method(fpcbase,tf)
 S3method(integrate,"function")
 S3method(integrate,tfb)
 S3method(integrate,tfd)
@@ -66,6 +62,10 @@ S3method(tfb,matrix)
 S3method(tfb,numeric)
 S3method(tfb,tfb)
 S3method(tfb,tfd)
+S3method(tfb_fpc,data.frame)
+S3method(tfb_fpc,matrix)
+S3method(tfb_fpc,numeric)
+S3method(tfb_fpc,tf)
 S3method(tfd,data.frame)
 S3method(tfd,list)
 S3method(tfd,matrix)
@@ -84,7 +84,6 @@ export(domain)
 export(evaluate)
 export(evaluations)
 export(evaluator)
-export(fpcbase)
 export(funplot)
 export(geom_lasagna)
 export(geom_meatballs)
@@ -100,6 +99,7 @@ export(rgp)
 export(sd)
 export(stat_tf)
 export(tfb)
+export(tfb_fpc)
 export(tfd)
 export(var)
 import(checkmate)
