define & use tfb_fpc class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(cumsum,tfd)
 S3method(depth,matrix)
 S3method(depth,tf)
 S3method(deriv,tfb)
+S3method(deriv,tfb_fpc)
 S3method(deriv,tfd)
 S3method(evaluate,data.frame)
 S3method(evaluate,default)
