zoom enabled. closes #23, adresses #21

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method("[",tf)
 S3method("[<-",tf)
+S3method("arg<-",tfd_irreg)
+S3method("arg<-",tfd_reg)
 S3method(Math,tfb)
 S3method(Math,tfd)
 S3method(Summary,tf)
@@ -74,6 +76,7 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
+export("arg<-")
 export("evaluator<-")
 export(StatTf)
 export(arg)
@@ -103,6 +106,7 @@ export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
+export(zoom)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
