implement "where". closes #22, kindof at least.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
+export("%inr%")
 export("arg<-")
 export("evaluator<-")
 export(StatTf)
@@ -92,6 +93,7 @@ export(funplot)
 export(geom_lasagna)
 export(geom_meatballs)
 export(geom_spaghetti)
+export(in_range)
 export(integrate)
 export(is_irreg)
 export(is_tf)
@@ -106,6 +108,7 @@ export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
+export(where)
 export(zoom)
 import(checkmate)
 import(dplyr)
