more better for #22

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export("%inr%")
 export("arg<-")
 export("evaluator<-")
 export(StatTf)
+export(anywhere)
 export(arg)
 export(as.tfb)
 export(as.tfd)
