--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(n_evaluations)
 export(rgp)
 export(sd)
 export(stat_tf)
+export(tf_gather)
 export(tfb)
 export(tfb_fpc)
 export(tfd)
@@ -131,6 +132,8 @@ importFrom(graphics,matplot)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(refund,fpca.sc)
+importFrom(rlang,":=")
+importFrom(rlang,is_empty)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,deriv)
@@ -140,6 +143,8 @@ importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_replace)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_select)
 importFrom(utils,head)
