--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,9 @@ importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(refund,fpca.sc)
 importFrom(rlang,":=")
+importFrom(rlang,enexpr)
 importFrom(rlang,is_empty)
+importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,deriv)
