more re. #33 : unnest & evaluate.data.frame now respects selection rules.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,8 @@ export(rgp)
 export(sd)
 export(stat_tf)
 export(tf_gather)
+export(tf_nest)
+export(tf_unnest)
 export(tfb)
 export(tfb_fpc)
 export(tfd)
