closes #36 - works around ggplot2's unnaming of data by adding an id attribute to all tfs. ugly shit.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ import(mgcv)
 import(purrr)
 import(tidyr)
 import(zoo)
+importFrom(digest,digest)
 importFrom(ggplot2,Geom)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,ggproto)
