more #34, #33: tf_spread done, better arg-checks for evaluate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(sd)
 export(stat_tf)
 export(tf_gather)
 export(tf_nest)
+export(tf_spread)
 export(tf_unnest)
 export(tfb)
 export(tfb_fpc)
@@ -151,6 +152,7 @@ importFrom(stats,var)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
 importFrom(tidyselect,quos)
+importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
 importFrom(utils,head)
 importFrom(utils,modifyList)
