closes #32. implement simple local smoothing for tfds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,9 @@ S3method(print,tfd_reg)
 S3method(quantile,tf)
 S3method(rev,tf)
 S3method(sd,tf)
+S3method(smooth,default)
+S3method(smooth,tfb)
+S3method(smooth,tfd)
 S3method(summary,tf)
 S3method(tfb,data.frame)
 S3method(tfb,list)
@@ -114,6 +117,7 @@ export(jiggle)
 export(n_evaluations)
 export(rgp)
 export(sd)
+export(smooth)
 export(sparsify)
 export(stat_tf)
 export(tf_gather)
@@ -149,6 +153,7 @@ importFrom(mvtnorm,rmvnorm)
 importFrom(pillar,obj_sum)
 importFrom(pillar,pillar_shaft)
 importFrom(pillar,type_sum)
+importFrom(pracma,savgol)
 importFrom(refund,fpca.sc)
 importFrom(rlang,":=")
 importFrom(rlang,enexpr)
@@ -157,12 +162,15 @@ importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,deriv)
+importFrom(stats,lowess)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,smooth)
 importFrom(stats,var)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
 importFrom(tidyselect,quos)
@@ -172,3 +180,5 @@ importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,tail)
+importFrom(zoo,rollmean)
+importFrom(zoo,rollmedian)
