--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com"
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
 Imports: 
-  checkmate, digest, dplyr, ggplot2, memoise, mvtnorm, mgcv, modelr, pillar, purrr, refund, rlang,
+  checkmate, digest, dplyr, ggplot2, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
   stats, stringr, tidyselect, tidyr, zoo
 License: GPL-3
 Encoding: UTF-8
@@ -27,6 +27,7 @@ Collate:
     'methods.R'
     'print-format.R'
     'rng.R'
+    'smooth.R'
     'summarize.R'
     'tfb-class.R'
     'tfb-fpc.R'
