--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,16 +4,18 @@ Version: 0.0.1
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("ctb")))
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
-Imports: 
+Imports:
   checkmate, digest, dplyr, ggplot2, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
   stats, stringr, tidyselect, tidyr, zoo
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat, data.table
+Suggests: testthat, data.table,
+    knitr,
+    rmarkdown
 Roxygen: list(markdown = TRUE)
-Collate: 
+Collate:
     'brackets.R'
     'calculus.R'
     'concatenate.R'
@@ -36,3 +38,4 @@ Collate:
     'utils.R'
     'where.R'
     'zoom.R'
+VignetteBuilder: knitr
