clean up geom_spaghetti. closes #51, adresses #39

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,8 @@ S3method(zoom,tfd)
 export("%inr%")
 export("arg<-")
 export("evaluator<-")
+export(GeomMeatballs)
+export(GeomSpaghetti)
 export(StatTf)
 export(anywhere)
 export(arg)
@@ -104,7 +106,6 @@ export(evaluate)
 export(evaluations)
 export(evaluator)
 export(funplot)
-export(geom_lasagna)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(in_range)
@@ -148,6 +149,7 @@ importFrom(graphics,axis)
 importFrom(graphics,image)
 importFrom(graphics,matlines)
 importFrom(graphics,matplot)
+importFrom(grid,gList)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(pillar,obj_sum)
