--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com"
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
 Imports:
-  checkmate, digest, dplyr, ggplot2, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
+  checkmate, digest, dplyr, ggplot2, grid, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
   stats, stringr, tidyselect, tidyr, zoo
 License: GPL-3
 Encoding: UTF-8
@@ -22,7 +22,8 @@ Collate:
     'convert.R'
     'depth.R'
     'evaluate.R'
-    'ggplot.R'
+    'geom-spaghetti.R'
+    'gglasagna.R'
     'graphics.R'
     'ops.R'
     'math.R'
