--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidyfun
 Title: Tools for Tidy Functional Data
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("ctb")))
 Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
 Depends: R (>= 3.4.3)
@@ -11,11 +11,10 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat, data.table,
-    knitr,
-    rmarkdown
+Suggests: testthat, data.table, knitr, rmarkdown, tidyverse, viridisLite
 Roxygen: list(markdown = TRUE)
 Collate:
+    'approx.R'
     'brackets.R'
     'calculus.R'
     'concatenate.R'
@@ -24,6 +23,7 @@ Collate:
     'evaluate.R'
     'geom-spaghetti.R'
     'gglasagna.R'
+    'globals.R'
     'graphics.R'
     'ops.R'
     'math.R'
