--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ S3method(format,tf)
 S3method(integrate,"function")
 S3method(integrate,tfb)
 S3method(integrate,tfd)
+S3method(is.finite,tf)
 S3method(lines,tf)
 S3method(mean,tf)
 S3method(median,tf)
@@ -65,6 +66,7 @@ S3method(print,tfd_irreg)
 S3method(print,tfd_reg)
 S3method(quantile,tf)
 S3method(rev,tf)
+S3method(scale_type,tf)
 S3method(sd,tf)
 S3method(smooth,default)
 S3method(smooth,tfb)
@@ -96,6 +98,11 @@ export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatTf)
 export(anywhere)
+export(approx_fill_extend)
+export(approx_linear)
+export(approx_locf)
+export(approx_nocb)
+export(approx_spline)
 export(arg)
 export(as.tfb)
 export(as.tfd)
@@ -108,6 +115,7 @@ export(evaluator)
 export(funplot)
 export(geom_meatballs)
 export(geom_spaghetti)
+export(gglasagna)
 export(in_range)
 export(integrate)
 export(is_irreg)
@@ -163,6 +171,7 @@ importFrom(rlang,is_empty)
 importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,deriv)
 importFrom(stats,lowess)
 importFrom(stats,median)
