--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(approx_fill_extend)
 export(approx_linear)
 export(approx_locf)
 export(approx_nocb)
+export(approx_none)
 export(approx_spline)
 export(arg)
 export(as.tfb)
