--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: tidyfun
 Title: Tools for Tidy Functional Data
 Version: 0.0.3
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("ctb")))
-Description: Provides S3 classes and methods for working with functional data in the tidyverse way.
+Description: Provides S3 classes and methods for tidy functional data.
 Depends: R (>= 3.4.3)
 Imports:
   checkmate, digest, dplyr, ggplot2, grid, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
@@ -21,6 +21,7 @@ Collate:
     'convert.R'
     'depth.R'
     'evaluate.R'
+    'geom-capellini.R'
     'geom-spaghetti.R'
     'gglasagna.R'
     'globals.R'
