--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,8 +94,10 @@ S3method(zoom,tfd)
 export("%inr%")
 export("arg<-")
 export("evaluator<-")
+export(GeomCapellini)
 export(GeomMeatballs)
 export(GeomSpaghetti)
+export(StatCapellini)
 export(StatTf)
 export(anywhere)
 export(approx_fill_extend)
@@ -114,6 +116,10 @@ export(evaluate)
 export(evaluations)
 export(evaluator)
 export(funplot)
+export(geom_capelini)
+export(geom_capellini)
+export(geom_cappelini)
+export(geom_cappellini)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(gglasagna)
@@ -129,6 +135,7 @@ export(rgp)
 export(sd)
 export(smooth)
 export(sparsify)
+export(stat_capellini)
 export(stat_tf)
 export(tf_gather)
 export(tf_nest)
@@ -148,6 +155,8 @@ import(mgcv)
 import(purrr)
 import(tidyr)
 import(zoo)
+importFrom(GGally,rescale01)
+importFrom(GGally,rescale11)
 importFrom(digest,digest)
 importFrom(ggplot2,Geom)
 importFrom(ggplot2,Stat)
