#58: rename approx, depth -> tf_XXX

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,6 @@ S3method(cumprod,tfb)
 S3method(cumprod,tfd)
 S3method(cumsum,tfb)
 S3method(cumsum,tfd)
-S3method(depth,matrix)
-S3method(depth,tf)
 S3method(deriv,tfb)
 S3method(deriv,tfb_fpc)
 S3method(deriv,tfd)
@@ -71,6 +69,8 @@ S3method(smooth,default)
 S3method(smooth,tfb)
 S3method(smooth,tfd)
 S3method(summary,tf)
+S3method(tf_depth,matrix)
+S3method(tf_depth,tf)
 S3method(tfb,data.frame)
 S3method(tfb,list)
 S3method(tfb,matrix)
@@ -99,17 +99,10 @@ export(GeomSpaghetti)
 export(StatCapellini)
 export(StatTf)
 export(anywhere)
-export(approx_fill_extend)
-export(approx_linear)
-export(approx_locf)
-export(approx_nocb)
-export(approx_none)
-export(approx_spline)
 export(arg)
 export(as.tfb)
 export(as.tfd)
 export(basis)
-export(depth)
 export(domain)
 export(evaluate)
 export(evaluations)
@@ -136,6 +129,13 @@ export(smooth)
 export(sparsify)
 export(stat_capellini)
 export(stat_tf)
+export(tf_approx_fill_extend)
+export(tf_approx_linear)
+export(tf_approx_locf)
+export(tf_approx_nocb)
+export(tf_approx_none)
+export(tf_approx_spline)
+export(tf_depth)
 export(tf_gather)
 export(tf_nest)
 export(tf_spread)
