export is.na methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,8 @@ S3method(format,tf)
 S3method(integrate,tfb)
 S3method(integrate,tfd)
 S3method(is.finite,tf)
+S3method(is.na,tf)
+S3method(is.na,tfd_irreg)
 S3method(lines,tf)
 S3method(mean,tf)
 S3method(median,tf)
