#54: rename where, anywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,7 +100,6 @@ export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatCapellini)
 export(StatTf)
-export(anywhere)
 export(arg)
 export(as.tfb)
 export(as.tfd)
@@ -131,6 +130,7 @@ export(smooth)
 export(sparsify)
 export(stat_capellini)
 export(stat_tf)
+export(tf_anywhere)
 export(tf_approx_fill_extend)
 export(tf_approx_linear)
 export(tf_approx_locf)
@@ -142,11 +142,11 @@ export(tf_gather)
 export(tf_nest)
 export(tf_spread)
 export(tf_unnest)
+export(tf_where)
 export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
-export(where)
 export(zoom)
 import(checkmate)
 import(dplyr)
