#54: rename zoom -> tf_zoom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ S3method(smooth,tfd)
 S3method(summary,tf)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
+S3method(tf_zoom,tfb)
+S3method(tf_zoom,tfd)
 S3method(tfb,data.frame)
 S3method(tfb,list)
 S3method(tfb,matrix)
@@ -90,8 +92,6 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
-S3method(zoom,tfb)
-S3method(zoom,tfd)
 export("%inr%")
 export("arg<-")
 export("evaluator<-")
@@ -143,11 +143,11 @@ export(tf_nest)
 export(tf_spread)
 export(tf_unnest)
 export(tf_where)
+export(tf_zoom)
 export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
-export(zoom)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
