#54: n_evaluations -> tf_count

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,9 +54,6 @@ S3method(lines,tf)
 S3method(mean,tf)
 S3method(median,tf)
 S3method(merge,tf)
-S3method(n_evaluations,default)
-S3method(n_evaluations,tfd_irreg)
-S3method(n_evaluations,tfd_reg)
 S3method(plot,tf)
 S3method(points,tf)
 S3method(print,tf)
@@ -71,6 +68,9 @@ S3method(smooth,default)
 S3method(smooth,tfb)
 S3method(smooth,tfd)
 S3method(summary,tf)
+S3method(tf_count,default)
+S3method(tf_count,tfd_irreg)
+S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
 S3method(tf_zoom,tfb)
@@ -123,7 +123,6 @@ export(is_tf)
 export(is_tfb)
 export(is_tfd)
 export(jiggle)
-export(n_evaluations)
 export(rgp)
 export(sd)
 export(smooth)
@@ -137,6 +136,7 @@ export(tf_approx_locf)
 export(tf_approx_nocb)
 export(tf_approx_none)
 export(tf_approx_spline)
+export(tf_count)
 export(tf_depth)
 export(tf_gather)
 export(tf_nest)
