#54: evaluations -> tf_evaluations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,10 +40,6 @@ S3method(evaluate,data.frame)
 S3method(evaluate,default)
 S3method(evaluate,tfb)
 S3method(evaluate,tfd)
-S3method(evaluations,default)
-S3method(evaluations,tfb)
-S3method(evaluations,tfd_irreg)
-S3method(evaluations,tfd_reg)
 S3method(format,tf)
 S3method(integrate,tfb)
 S3method(integrate,tfd)
@@ -73,6 +69,10 @@ S3method(tf_count,tfd_irreg)
 S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
+S3method(tf_evaluations,default)
+S3method(tf_evaluations,tfb)
+S3method(tf_evaluations,tfd_irreg)
+S3method(tf_evaluations,tfd_reg)
 S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfd)
 S3method(tfb,data.frame)
@@ -106,7 +106,6 @@ export(as.tfd)
 export(basis)
 export(domain)
 export(evaluate)
-export(evaluations)
 export(evaluator)
 export(funplot)
 export(geom_capelini)
@@ -138,6 +137,7 @@ export(tf_approx_none)
 export(tf_approx_spline)
 export(tf_count)
 export(tf_depth)
+export(tf_evaluations)
 export(tf_gather)
 export(tf_nest)
 export(tf_spread)
