#54: rgp -> tf_rgp, tf_jiggle, tf_sparsify

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,11 +121,8 @@ export(is_irreg)
 export(is_tf)
 export(is_tfb)
 export(is_tfd)
-export(jiggle)
-export(rgp)
 export(sd)
 export(smooth)
-export(sparsify)
 export(stat_capellini)
 export(stat_tf)
 export(tf_anywhere)
@@ -139,7 +136,10 @@ export(tf_count)
 export(tf_depth)
 export(tf_evaluations)
 export(tf_gather)
+export(tf_jiggle)
 export(tf_nest)
+export(tf_rgp)
+export(tf_sparsify)
 export(tf_spread)
 export(tf_unnest)
 export(tf_where)
