#54: domain -> tf_domain

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,7 +104,6 @@ export(arg)
 export(as.tfb)
 export(as.tfd)
 export(basis)
-export(domain)
 export(evaluate)
 export(evaluator)
 export(funplot)
@@ -134,6 +133,7 @@ export(tf_approx_none)
 export(tf_approx_spline)
 export(tf_count)
 export(tf_depth)
+export(tf_domain)
 export(tf_evaluations)
 export(tf_gather)
 export(tf_jiggle)
