--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,7 +94,7 @@ S3method(var,default)
 S3method(var,tf)
 export("%inr%")
 export("arg<-")
-export("evaluator<-")
+export("tf_evaluator<-")
 export(GeomCapellini)
 export(GeomMeatballs)
 export(GeomSpaghetti)
@@ -105,7 +105,6 @@ export(as.tfb)
 export(as.tfd)
 export(basis)
 export(evaluate)
-export(evaluator)
 export(funplot)
 export(geom_capelini)
 export(geom_capellini)
@@ -135,6 +134,7 @@ export(tf_count)
 export(tf_depth)
 export(tf_domain)
 export(tf_evaluations)
+export(tf_evaluator)
 export(tf_gather)
 export(tf_jiggle)
 export(tf_nest)
