#54: evaluate -> tf_evaluate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,6 @@ S3method(cumsum,tfd)
 S3method(deriv,tfb)
 S3method(deriv,tfb_fpc)
 S3method(deriv,tfd)
-S3method(evaluate,data.frame)
-S3method(evaluate,default)
-S3method(evaluate,tfb)
-S3method(evaluate,tfd)
 S3method(format,tf)
 S3method(integrate,tfb)
 S3method(integrate,tfd)
@@ -69,6 +65,10 @@ S3method(tf_count,tfd_irreg)
 S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
+S3method(tf_evaluate,data.frame)
+S3method(tf_evaluate,default)
+S3method(tf_evaluate,tfb)
+S3method(tf_evaluate,tfd)
 S3method(tf_evaluations,default)
 S3method(tf_evaluations,tfb)
 S3method(tf_evaluations,tfd_irreg)
@@ -104,7 +104,6 @@ export(arg)
 export(as.tfb)
 export(as.tfd)
 export(basis)
-export(evaluate)
 export(funplot)
 export(geom_capelini)
 export(geom_capellini)
@@ -133,6 +132,7 @@ export(tf_approx_spline)
 export(tf_count)
 export(tf_depth)
 export(tf_domain)
+export(tf_evaluate)
 export(tf_evaluations)
 export(tf_evaluator)
 export(tf_gather)
