#54: basis -> tf_basis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,6 @@ export(StatTf)
 export(arg)
 export(as.tfb)
 export(as.tfd)
-export(basis)
 export(funplot)
 export(geom_capelini)
 export(geom_capellini)
@@ -129,6 +128,7 @@ export(tf_approx_locf)
 export(tf_approx_nocb)
 export(tf_approx_none)
 export(tf_approx_spline)
+export(tf_basis)
 export(tf_count)
 export(tf_depth)
 export(tf_domain)
