#54: resolution -> tf_resolution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ export(tf_evaluator)
 export(tf_gather)
 export(tf_jiggle)
 export(tf_nest)
+export(tf_resolution)
 export(tf_rgp)
 export(tf_sparsify)
 export(tf_spread)
